# QuantProto

./: .dockerignore  .gitignore  Dockerfile  PROJECT.md  README.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dashboard/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
quantproto/: __init__.py  execution_model.py  factor_engine.py  logging_config.py  regime_model.py  risk_engine.py  walk_forward.py
quantproto/agents/: agent_card.py  alpha_agent.py  auth.py  http_server.py  orchestrator.py  risk_agent.py
quantproto/analytics/: __init__.py  correlation.py  drawdown.py
quantproto/backtest/: __init__.py
quantproto/compliance/: __init__.py
quantproto/compute/: __init__.py
quantproto/dashboard/: __init__.py  api.py
quantproto/data/: fetcher.py  universe.py
quantproto/demo/: __init__.py  data_loader.py  run_demo.py
quantproto/factors/: __init__.py
quantproto/genai/: __init__.py
quantproto/mcp/: __init__.py  rate_limit.py  sanitize.py  server.py
quantproto/ml/: __init__.py  feature_store.py  models.py
quantproto/portfolio/: __init__.py  optimiser.py
quantproto/regime/: __init__.py
quantproto/risk/: __init__.py  stress.py
tests/: conftest.py  test_advanced.py  test_agents.py  test_alpha.py  test_correlation.py  test_data.py  test_demo.py  test_drawdown.py  test_execution.py  test_mcp_contracts.py  test_portfolio.py  test_rate_limit.py  test_regime.py  test_risk.py  test_sanitize.py  test_strategy.py  test_timeframe.py  test_walk_forward.py
(+25 files in other folders)
